1410-data-grid-context-submenu-cutoff (fix mobile view)

--- a/src/components/ids-menu/ids-menu-group.scss
+++ b/src/components/ids-menu/ids-menu-group.scss
@@ -11,5 +11,6 @@
   flex-direction: column;
   flex-wrap: wrap;
   max-height: 90vh;
+  max-width: 100vw;
   width: max-content; // Doesn't work in Safari and Firefox
 }
